@@ -3,6 +3,9 @@ package com.cmi.simu.routes.service;
 import com.cmi.simu.flow.HospitalUnit;
 import com.cmi.simu.flow.Hospital;
 import com.cmi.simu.flow.ArrivalScenario;
+import com.cmi.simu.routes.records.HospitalDTO;
+import com.cmi.simu.routes.records.ServiceDTO;
+import lombok.Getter;
 import org.springframework.stereotype.Service;
 
 import java.lang.reflect.Field;
@@ -10,32 +13,34 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 public class HospitalService {
+    @Getter
     private static final List<Hospital> hospitals = new ArrayList<>();
     private int nextId = 1;
 
+    // -- SCENARIO PERSISTANT --
+    // On le crée une seule fois,
+    // et il s'incrémente (countdown, inEvent) au fur et à mesure des appels.
+    private final ArrivalScenario scenario;
+
     public HospitalService() {
+        scenario = new ArrivalScenario(hospitals);
     }
 
     public static List<Hospital> getAllHospitals() {
-        return hospitals;}
+        return hospitals;
+    }
 
-    public List<Map<String, Object>> getHospitalsWithServices() {
-            for(Hospital h : hospitals) {
-                h.simulateOneTick(new ArrivalScenario(hospitals));
-            }
-                return HospitalService.getAllHospitals().stream()
-                    .map(hospital -> Map.of(
-                            "id", hospital.getId(),
-                            "name", hospital.getName(),
-                            "services", hospital.getUnits().stream()
-                                    .map(this::convertObjectToMap)  // 🔥 Conversion automatique !
-                                    .collect(Collectors.toList())
-                    ))
-                    .collect(Collectors.toList());
+    public List<HospitalDTO> getHospitalsWithServices() {
+
+        for (Hospital h : hospitals) {
+            h.simulateOneTick(scenario);
+        }
+        return hospitals.stream()
+                .map(this::toHospitalDTO)
+                .toList();
     }
 
     private Map<String, Object> convertObjectToMap(Object obj) {
@@ -52,10 +57,8 @@ public class HospitalService {
     }
 
 
-
-
     // Modification pour retourner les services avec la capacité maximale et occupée
-    public List<Map<String, Object>> getHospitalServices(Long id) {
+    public List<ServiceDTO> getHospitalServices(Long id) {
         // Recherche de l'hôpital par ID
         Hospital hospital = hospitals.stream()
                 .filter(h -> h.getId() == id)
@@ -65,20 +68,15 @@ public class HospitalService {
         // Si l'hôpital existe, transformer les services en Map avec capacité
         if (hospital != null) {
             return hospital.getUnits().stream()
-                    .map(unit -> Map.<String, Object>of(
-                            "name", unit.getName(),
-                            "maxCapacity", unit.getMaxCapacity(),
-                            "occupiedCapacity", unit.getCurrentLoad()
-                    ))
-                    .collect(Collectors.toList());
+                    .map(u -> new ServiceDTO(u.getName(), u.getMaxCapacity(), u.getCurrentLoad()))
+                    .toList();
         }
         return null; // Retourner null si l'hôpital n'est pas trouvé
     }
 
-    public Hospital createHospital() {
-        Hospital hospital = new Hospital();
+    public Hospital createHospital(Hospital hospital) {
         hospital.setId(nextId++);
-        for(Hospital h : hospitals) {
+        for (Hospital h : hospitals) {
             h.addNeighbor(hospital);
             hospital.addNeighbor(h);
         }
@@ -109,5 +107,20 @@ public class HospitalService {
             }
         }
         return false;
+    }
+
+    /**
+     * Convertit un Hospital en DTO, en copiant seulement les champs utiles.
+     * On exclut 'neighbors' pour éviter la récursion.
+     */
+    private HospitalDTO toHospitalDTO(Hospital h) {
+        List<ServiceDTO> serviceDTOs = h.getUnits().stream()
+                .map(u -> new ServiceDTO(u.getName(), u.getMaxCapacity(), u.getCurrentLoad()))
+                .toList();
+        return new HospitalDTO(h.getId(), h.getName(), serviceDTOs);
+    }
+
+    public void deleteAllHospitals() {
+        hospitals.clear();
     }
 }
